# rodata

./: .gitignore  ACKNOWLEDGEMENTS  Cargo.toml  LICENSE  README.md
src/: lib.rs  model.rs  writer.rs
src/convert/: csv.rs  json.rs  mod.rs  xml.rs
src/entity_stream/: filter.rs
src/json_stream/: LICENSE  decode.rs  mod.rs  stream.rs  sync.rs
src/provider/: entity_individual.rs  entity_set.rs  function.rs  mod.rs
src/service/: entity_stream.rs  mod.rs  url.rs
